# windows-ci-test

./: CMakeLists.txt
.github/workflows/: blank.yml
extlib/: CMakeLists.txt
extlib/portablexdr-4.9.1/: CMakeLists.txt
src/: main.cpp
